# nala-hackathon

./: .env  .env.example  .env.sample  .gitignore  .lycheeignore  .markdownlint.jsonc  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  azure.yaml  commitlint.config.js  index.html  manage.py  package-lock.json  package.json  pyproject.toml  vite.config.ts
.githooks/: commit-msg  pre-push
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: lint-markdown.yml  run-checks.yml  stale-bot.yml  validate-markdown.yml  validate-pr.yml
app/backend/: db.sqlite3  manage.py  nala_client.py  (+2 more)
backend/: app.py  backend.py  challenges.db  challenges_api.py  database.py  endpoint test.py  faiss.index  import_challenges.py  init_db.py  populate_all_attempts.py  rag_api.py  requirements.txt  schema.sql  test_all_errors.py  tester.py  view_database.ipynb
docs/: CONTRIBUTORS_STEP_BY_STEP.md  DAILY_CHALLENGE_DESIGN.md  DAILY_CHALLENGE_WORKFLOW.md  DATABASE_MODELS.md  DATABASE_SETUP.md  DATA_MANAGEMENT.md  PROJECT_STRUCTURE.md  REVIEWERS_STEP_BY_STEP.md
infra/: abbreviations.json  main.bicep
my-app/: tailwind.config.js
notebooks/: sample.ipynb
samples/: ChartBar.jsx  Dashboard.jsx  db_operations.py  urls.py  views.py
scripts/: fetch_sas_token.py  format_bicep.ps1  format_bicep.sh  get_data.ps1  get_data.sh  setup_dvc.ps1  setup_dvc.sh  setup_hooks.ps1  setup_hooks.sh
src/: App.jsx  App.tsx  DailyChallenge-Redesign-Demo.md  Message.tsx  index.css  main.jsx
test/: App.tsx
testtt/: README.md  package-lock.json  package.json
(+107 files in other folders)
